--- a/bootstrap-3.3.7-dist/css/estilo.css
+++ b/bootstrap-3.3.7-dist/css/estilo.css
@@ -2,7 +2,7 @@
   margin-top: -21px;
   padding-left: 50px;
   padding-right: 50px;
-  background-image: url("http://www.verscontabilidade.com.br/wp-content/uploads/2016/07/00287520150522114109.png");
+  background-image: url("imagens/estande.png");
   background-size: cover;
   color: white;
 }
